# gettext

./: LICENSE  README.md
gettext/: COPYING  ChangeLog  Makefile.am  configure.ac
gettext/po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  fr.po
gettext/src/: gt.c
small-utils/: Makefile  amount.c  ct.c  lc.c  nl.c  sc.c  sx.c  td.c
